@@ -46,7 +46,7 @@ sub new($$) {
         run_program::run('xset', 'm', '1/8', '1');
     }
     any::disable_x_screensaver();
-    run_program::raw({ detach => 1 }, 'drakx-matchbox-window-manager');
+    run_program::raw({ detach => 1 }, 'mutter');
     install::gtk::init_gtk($o);
     install::gtk::init_sizes($o);
     install::gtk::install_theme($o);
