@@ -4,6 +4,9 @@
   o fix pausing installing while displaying release notes
 - drakx-in-chroot:
   o advise to install xephyr if missing
+- use mutter instead of matchbox in order to try to workaround
+  diskdrake issues (mga#11790, mga#11989, ...)
+  as a side effect, stage2 shrinks by 3Mb...
 
 Version 16.14 - 10 December 2013
 
